added other website hyperlink

--- a/website/bestinstrument.html
+++ b/website/bestinstrument.html
@@ -27,7 +27,11 @@
     </p>
 
     <p class = "centertext">
-        <a href="https://lennoxweb.website2.me/">Visit willlennox.website2.me!</a>
+        <a href="https://lennoxweb.website2.me/">Visit lennoxweb.website2.me!</a>
+    </p>
+
+    <p class = "centertext">
+        <a href="https://willlennox.website2.me/">Visit willlennox.website2.me!</a>
     </p>
 
 </body>
