added japanese functionality

--- a/website/bestinstrument.html
+++ b/website/bestinstrument.html
@@ -23,7 +23,7 @@
     </label>
  
     <p class = "centertext">
-        <a href = "infomation.html">Next Page</a>
+        <a href = "infomation.html">Japanese</a>
     </p>
 
     <p class = "centertext">
